--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-spinners": "^0.10.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
